Fixed word wrap bug and rapid notification bug for notifications.

--- a/public/css/editor/ui.css
+++ b/public/css/editor/ui.css
@@ -8,3 +8,10 @@
     z-index: 500;
     transition: all .15s ease; }
 
+.modal-title, .modal-body { 
+    white-space: pre-wrap;      /* CSS3 */   
+    white-space: -moz-pre-wrap; /* Firefox */    
+    white-space: -pre-wrap;     /* Opera <7 */   
+    white-space: -o-pre-wrap;   /* Opera 7 */    
+    word-wrap: break-word;      /* IE */
+}
